<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.huma.almalzma.SignupActivity">


    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName">

        <requestFocus/>
    </EditText>


    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name_edit_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email_edit_text"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/password_confirm_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password_edit_text"
        android:ems="10"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/faculty_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/progress_view"
        android:layout_alignStart="@+id/progress_view"
        android:layout_below="@+id/password_confirm_edit_text"
        android:text="@string/faculty_select_message"/>

    <Spinner
        android:id="@+id/faculty_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/faculty_text_view"
        android:layout_marginBottom="5dp"
        android:entries="@array/faculties"
        android:spinnerMode="dropdown"/>

    <LinearLayout
        android:id="@+id/text_view_linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/faculty_spinner"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/department_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/department_select_message"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/grade_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/grade_select_message"
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinners_linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_view_linearLayout"
        android:orientation="horizontal"
        android:weightSum="10">

        <Spinner
            android:id="@+id/department_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:entries="@array/departments"
            android:prompt="@string/department_select_message"
            android:spinnerMode="dropdown"
            android:visibility="invisible"/>

        <Spinner
            android:id="@+id/grade_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:entries="@array/grades"
            android:prompt="@string/grade_select_message"
            android:spinnerMode="dropdown"
            android:visibility="invisible"/>
    </LinearLayout>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinners_linearLayout"
        android:layout_marginTop="40dp"
        android:text="@string/signup"/>

    <com.rey.material.widget.ProgressView
        android:id="@+id/progress_view"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        app:pv_autostart="true"
        app:pv_circular="true"
        app:pv_progressMode="indeterminate"
        app:pv_progressStyle="@style/Material.Drawable.CircularProgress"/>


</RelativeLayout>
